--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,15 @@ services:
     networks:
       - assessment_net
 
+  redis:
+    image: redis:alpine
+    container_name: assessment-redis
+    restart: unless-stopped
+    ports:
+      - 6380:6379
+    networks:
+      - assessment_net
+
 networks:
   assessment_net:
     driver: bridge
